--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Christopher DiStasio",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1"
   }
 }
