--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "express-react-views": "^0.11.0",
-    "react": "^18.2.0"
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "express-react-views": "^0.11.0"
   }
 }
